[package]
name = "api"
version = "0.1.0"
authors = ["Tom Andrews <git@tomandrews.co.uk>"]

[dependencies]
nickel = "*"
rustc-serialize = "*"
diesel = "0.5.0"
diesel_codegen = { version = "0.5.0", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
time = "*"
